css/grayscale.css
/*!
 * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    width: 100%;
    height: 100%;
    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
    color: #fff;
    background-color: #000;
}

html {
    width: 100%;
    height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 35px;
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    letter-spacing: 1px;
}

p {
    margin: 0 0 25px;
    font-size: 16px;
    line-height: 1.5;
    font-family: Muli,sans-serif;
}


@media(min-width:767px) {
    p {
        margin: 0 0 35px;
        font-size: 20px;
        line-height: 1.6;
    }
}

a {
    color: #219ab3;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

a:hover,
a:focus {
    text-decoration: none;
    color: #11505d;
}

.light {
    font-weight: 400;
}

.navbar-custom {
    margin-bottom: 0;
    border-bottom: 1px solid rgba(255,255,255,.3);
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    background-color: #000;
}

.navbar-custom .navbar-brand {
    font-weight: 700;
}

.navbar-custom .navbar-brand:focus {
    outline: 0;
}

.navbar-custom .navbar-brand .navbar-toggle {
    padding: 4px 6px;
    font-size: 16px;
    color: #fff;
}

.navbar-custom .navbar-brand .navbar-toggle:focus,
.navbar-custom .navbar-brand .navbar-toggle:active {
    outline: 0;
}

.navbar-custom a {
    color: #fff;
}

.navbar-custom .nav li.active {
    outline: nonte;
    background-color: rgba(255,255,255,.3);
}

.navbar-custom .nav li a {
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus,
.navbar-custom .nav li a.active {
    outline: 0;
    background-color: rgba(255,255,255,.3);
}

#nav
{
    margin: 10px;
    width: 100%;
}


@media(min-width:767px) {
    .navbar {
        padding: 10px 0;
        border-bottom: 0;
        letter-spacing: 1px;
        background: 0 0;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
    }

    .top-nav-collapse {
        padding: 0;
        background-color: #000;
    }

    .navbar-custom.top-nav-collapse {
        border-bottom: 1px solid rgba(255,255,255,.3);
    }
}

.intro {
    display: table;
    width: 100%;
    padding: 100px 0;
    text-align: center;
    color: #fff;
    background: url("../assets/photos/RyanAndWhit.jpg") no-repeat bottom center scroll;
    background-color: #000;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    height: auto;
}

.intro .intro-body {
    display: table-cell;
    vertical-align: middle;
}

.intro .intro-body .brand-heading {
    font-size: 40px;
}

.intro .intro-body .intro-text {
    font-size: 18px;
}


@media(min-width:767px) {
    .intro {
        height: 100%;
        padding: 0;
    }

    .intro .intro-body .brand-heading {
        font-size: 100px;
    }

    .intro .intro-body .intro-text {
        font-size: 25px;
    }
}

#about h1 {
    float: left;
}

#about ul {
    float: right;
}

#about {    
    margin-top: 200px;
    padding-bottom: 350px;
}

#about p{
    text-align: left;
    font-size: 16px;
}

#about img {
    padding: 10px;
}

#about .row .tab-content{
    background-color: hsl(300,0%,19%);
    padding: 25px;
    height: 500px;
    overflow-y: scroll;
    border-radius: 10px;
}

#AboutPic{
    height: 400px;
    width: auto;
    float: left;
}

.btn-circle {
    width: 70px;
    height: 70px;
    margin-top: 15px;
    padding: 7px 16px;
    border: 2px solid #fff;
    border-radius: 35px;
    font-size: 40px;
    color: #fff;
    background: 0 0;
    position: relative;
    margin-top: 99%;
    margin-left: 40%;
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.btn-circle:hover,
.btn-circle:focus {
    outline: 0;
    color: #fff;
    background: rgba(255,255,255,.1);
}

.btn-circle i.animated {
    -webkit-transition-property: -webkit-transform;
    -webkit-transition-duration: 1s;
    -moz-transition-property: -moz-transform;
    -moz-transition-duration: 1s;
}

.btn-circle:hover i.animated {
    -webkit-animation-name: pulse;
    -moz-animation-name: pulse;
    -webkit-animation-duration: 1.5s;
    -moz-animation-duration: 1.5s;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;   
    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
}


#spotlight-text-container {
    height: 570px;  
    text-align: center;
    padding-top: 370px;
    padding-left:98px;
    text-shadow: 3px 3px 5px rgba(0, 0, 0, 1);
}

#spotlight-name, #spotlight-date {
    font-size: 300%;
    color: #fff;
    font-family: 'Allura',cursive;
}

.circle2 {
    border: 1px solid #fff;
    border-radius: 25px;
    display: inline-block;
    height: 10px;
    vertical-align: middle;
    width: 10px;
}



@-webkit-keyframes pulse {    
    0 {
        -webkit-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -webkit-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }
}

@-moz-keyframes pulse {    
    0 {
        -moz-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -moz-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -moz-transform: scale(1);
        transform: scale(1);
    }
}

.content-section {
    padding-top: 100px;
}

#venue{
    padding-bottom: 200px;
}

.venue-section {
    width: 100%;
    padding: 50px 0;
    color: #fff;
    background: url(../assets/photos/reception-hall.jpg) no-repeat center center scroll;
    background-color: rgba(0, 0, 0, 0.5);
    -webkit-background-size: contain;
    -moz-background-size: contain;
    background-size: contain;
    -o-background-size: contain;
}

.venue-section .container{
    background-color: rgba(0, 0, 0, 0.5);
}

#venue .left-col{
    text-align: left;
}

#venue h2{
    text-align: center;
}
#venue h3{
    margin-bottom: 10px;
}

#venue h4{
    margin-top: 10px;
    margin-bottom: 0px; 
}

#venue h5{
    margin-bottom: 25px;
}

#venue p{
    margin-top: 5px;
    font-size: 15px;
    margin-bottom: 20px;
}

#venue iframe{
    background-color: white;
}

.lodge-section p{
    text-align: left;
    font-size: 15px;    
}

#lodging{
    padding-top: 100px;
    padding-bottom: 350px;
}

#lodging button{
    width: 100%;
}

#lodging img{
    height: 200px;
    width: 98%;
    margin-bottom: 20px;
}

#lodging h5{
    padding-top: 25px;
}


#Registry{
    padding-top: 150px;
    padding-bottom: 350px;
}

#RSVP{
    padding-bottom: 350px;
}

#contact p a {
    display: inline-block;
    padding: 10px;
}

.registry-stores{
    padding-bottom: 60px;
}
.reg-box {
    box-sizing: border-box;
    display: inline-block;
    vertical-align: top;
}

#Registry .square {
    background-color: #FFF;
    box-shadow: 0px 0px 10px 4px rgba(50, 50, 50, 0.2) inset;
    height: 275px;
    margin: 0px 1% 0px 1%;
    width: 275px;
}
#Registry .surlatable {
    background: url("../assets/photos/surlatable.jpg") no-repeat bottom center scroll;
    background-size: cover;
}

#Registry .surlatable:hover
{
    border: 5px solid #6EC9E0;
}

#contact {
    padding-bottom: 200px;
}


#map {
    width: 100%;
    height: 200px;
    margin-top: 100px;
}

@media(min-width:767px) {


    .download-section {
        padding: 100px 0;
    }

    #map {
        height: 400px;
        margin-top: 250px;
    }
}

.btn {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 400;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.btn-default {
    border: 1px solid #219ab3;
    color: #219ab3;
    background-color: transparent;
}

.btn-default:hover,
.btn-default:focus {
    border: 1px solid #219ab3;
    outline: 0;
    color: #000;
    background-color: #219ab3;
}

ul.banner-social-buttons {
    margin-top: 0;
}

@media(max-width:1199px) {
    ul.banner-social-buttons {
        margin-top: 15px;
    }
}

@media(max-width:767px) {
    ul.banner-social-buttons li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons li:last-child {
        margin-bottom: 0;
    }
}

footer {
    padding: 50px 0;
}

footer p {
    margin: 0;
}

::-moz-selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255,255,255,.2);
}

::selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255,255,255,.2);
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background: 0 0;
}

body {
    webkit-tap-highlight-color: rgba(255,255,255,.2);
}

